RESOLVED FIXED112472
Text track cues do not update sizes when entering or exiting full screen.
https://bugs.webkit.org/show_bug.cgi?id=112472
Summary Text track cues do not update sizes when entering or exiting full screen.
Jer Noble
Reported 2013-03-15 15:52:08 PDT
Text track cues do not update sizes when entering or exiting full screen.
Attachments
Patch (2.28 KB, patch)
2013-03-15 16:13 PDT, Jer Noble
no flags
Patch (5.04 KB, patch)
2013-03-18 13:46 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2013-03-15 16:13:02 PDT
Build Bot
Comment 2 2013-03-15 17:50:04 PDT
Comment on attachment 193393 [details] Patch Attachment 193393 [details] did not pass mac-ews (mac): Output: http://webkit-commit-queue.appspot.com/results/17182237 New failing tests: media/track/track-cue-mutable-text.html
WebKit Review Bot
Comment 3 2013-03-15 19:41:42 PDT
Comment on attachment 193393 [details] Patch Attachment 193393 [details] did not pass chromium-ews (chromium-xvfb): Output: http://webkit-commit-queue.appspot.com/results/17186304 New failing tests: media/track/track-cue-mutable-text.html
Build Bot
Comment 4 2013-03-15 23:27:11 PDT
Comment on attachment 193393 [details] Patch Attachment 193393 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-commit-queue.appspot.com/results/17195207 New failing tests: media/track/track-cue-mutable-text.html
Jer Noble
Comment 5 2013-03-18 13:46:05 PDT
Created attachment 193642 [details] Patch Fixed failing text track test.
Eric Carlson
Comment 6 2013-03-18 14:13:23 PDT
Comment on attachment 193642 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=193642&action=review > Source/WebCore/html/track/TextTrackCueGeneric.cpp:140 > + if (!hasDisplayTree ()) Nit: extra space before "()".
Jer Noble
Comment 7 2013-03-18 14:14:51 PDT
Jer Noble
Comment 8 2013-03-18 15:53:49 PDT
Note You need to log in before you can comment on or make changes to this bug.