Text track cues do not update sizes when entering or exiting full screen. https://bugs.webkit.org/show_bug.cgi?id=112472

Reviewed by Eric Carlson.

The style properties of the TextCueBoxes were not being updated after the size of the video bounds changed.
Because getDisplayTree() will not do it when the cue itself has not changed, explicitly call videoSizeDidChange()
from updateSizes().

* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlTextTrackContainerElement::updateSizes): call videoSizeDidChange() on every active cue.
* html/track/TextTrackCue.h:
(WebCore::TextTrackCue::hasDisplayTree): returns whether or not the cue has created a display tree without side effects.
(WebCore::TextTrackCue::videoSizeDidChange): Overridable empty method.
* html/track/TextTrackCueGeneric.cpp:
(WebCore::TextTrackCueGeneric::videoSizeDidChange): Update the CSS height attribute of the cue box using the new video size.
* html/track/TextTrackCueGeneric.h:

Canonical link: https://commits.webkit.org/130943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146140 268f45cc-cd09-0410-ab3c-d52691b4dbfc