Source/WebCore/html/track/TextTrackCueGeneric.h
@@ -68,6 +68,8 @@ public:
     Color backgroundColor() const { return m_backgroundColor; }
     void setBackgroundColor(RGBA32 color) { m_backgroundColor.setRGB(color); }
 
+    virtual void videoSizeDidChange(const IntSize&);
+
     virtual bool operator==(const TextTrackCue&) const OVERRIDE;
     virtual bool operator!=(const TextTrackCue& cue) const OVERRIDE
     {
